# clock_project

./: %1  .gitignore  AI_Prompts  BootLog.txt  CLAUDE.md  CMakeLists.txt  Claude_Help.txt  README.md  Resume_Claude.txt  build.sh  partitions.csv  sdkconfig.defaults  version.json
.github/workflows/: release.yml
components/clock_manager/: CMakeLists.txt  clock_manager.cpp  position_sensor.cpp
components/clock_manager/include/: clock_manager.h  position_sensor.h
components/config_store/: config_store.cpp
components/config_store/include/: config_store.h
components/display/: display.cpp
components/display/include/: display.h
components/encoder/: CMakeLists.txt  encoder.cpp
components/encoder/include/: encoder.h
components/event_log/: CMakeLists.txt  event_log.cpp
components/event_log/include/: event_log.h
components/led/: led_manager.cpp
components/led/include/: led_manager.h
components/matter/: CMakeLists.txt  idf_component.yml  matter_bridge.cpp
components/matter/include/: matter_bridge.h
components/menu/: CMakeLists.txt  menu.cpp
components/menu/include/: menu.h
components/networking/: CMakeLists.txt  networking.cpp
components/networking/include/: networking.h
components/ota_manager/: CMakeLists.txt  ota_manager.cpp
components/stepper_motor/: CMakeLists.txt  stepper_motor.cpp
components/webserver/: CMakeLists.txt  web_ui.h  webserver.cpp
docs/: Claude_Help.txt  First Time Setup.md  Network Setup.md  Startup Help.txt  User Manual.md  help.html  logs.txt
main/: CMakeLists.txt  console_commands.cpp  console_commands.h  main.cpp
website/: index.html
(+3 files in other folders)
