idf_component_register(
    SRCS
        "clock_manager.cpp"
        "position_sensor.cpp"
    INCLUDE_DIRS
        "include"
    REQUIRES
        stepper_motor
        config_store
        event_log
        driver
        esp_adc
        esp_timer
        freertos
        log
        nvs_flash
        lwip
)
